2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionItem.cs: Ignore the SelectionDisposed event if the
	  action item has already been disposed.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Remove undo annotations from the xml
	  document when saving.

2007-10-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/objects.xml: Set default value for ShowScrollbars
	  property.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionItem.cs: The selected object needs to be the action
	  because that's what is shown in the properties pad.

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/TextView.cs, libstetic/wrapper/TreeView.cs: By default,
	  show TextView and TreeView widgets wrapped in a ScrolledWindow. Fixes
	  bug #324439.
	* libstetic/wrapper/Widget.cs, libstetic/wrapper/Container.cs,
	  libstetic/wrapper/ScrolledWindow.cs, libstetic/wrapper/Viewport.cs,
	  libstetic/wrapper/objects.xml: Implemented new ShowScrollbars
	  pseudo-property for widgets. When set, the widget will be wrapped inside
	  a ScrolledWindow. This scrolled window will be bound to the widget, so
	  if the widget is deleted or moved, the ScrolledWindow will also be
	  deleted or moved.
	* libstetic/wrapper/Table.cs, libstetic/wrapper/Paned.cs,
	  libstetic/wrapper/Box.cs, libstetic/wrapper/Notebook.cs: Methods for
	  adding widgets to a container other than Add() do not fire the child
	  Added event, so it has to be manually called.

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/Clipboard.cs, libsteticui/Clipboard.cs: Moved to libstetic.
	* libstetic/editor/ActionGroupEditor.cs, libstetic/editor/ActionItem.cs,
	  libstetic/editor/ActionMenuItem.cs, libstetic/editor/ActionToolItem.cs:
	  Factorized common code in ActionMenuItem and ActionToolItem into
	  ActionItem. Implemented IEditableObject.