@@ -284,12 +284,6 @@ namespace Stetic {
 	class ActionPaletteGroup : PaletteGroup 
 	{
 		Wrapper.ActionGroup group;
-		static Gdk.Pixbuf defaultActionIcon;
-		
-		static ActionPaletteGroup ()
-		{
-			defaultActionIcon = Gdk.Pixbuf.LoadFromResource ("action.png");
-		}
 		
 		public ActionPaletteGroup (string name, Wrapper.ActionGroup group): base (name)
 		{
@@ -319,7 +313,7 @@ namespace Stetic {
 		{
 			foreach (Stetic.Wrapper.Action action in group.Actions) {
 				Gdk.Pixbuf icon = action.RenderIcon (Gtk.IconSize.Menu);
-				if (icon == null) icon = defaultActionIcon;
+				if (icon == null) icon = ActionComponent.DefaultActionIcon;
 				Stetic.Wrapper.ActionPaletteItem it = new Stetic.Wrapper.ActionPaletteItem (Gtk.UIManagerItemType.Menuitem, null, action);
 				Append (new InstanceWidgetFactory (action.MenuLabel, icon, it));
 			}
