@@ -1,3 +1,12 @@
+2007-10-26  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libsteticui/PaletteBackend.cs: Moved defaultActionIcon to ActionComponent.
+	* libsteticui/ActionComponent.cs, libsteticui/ComponentType.cs,
+	  libstetic/wrapper/Action.cs: Added a label property to the
+	  ActionComponent. The label will be shown in the toolbox now. Also show
+	  the default action icon if no icon is specified, instead of the missing
+	  image icon.
+
 2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libstetic/editor/ActionItem.cs: Ignore the SelectionDisposed event if the
